# value_leakage

./: .gitignore  .gitmodules  README.md  pyproject.toml  sitecustomize.py
agentic_effort/: llm_providers.py  reproduce.sh  reproduce_plots.sh  reproduce_sampling.sh
agentic_grading/: .dockerignore  .gitignore  Dockerfile  Dockerfile.codex  Dockerfile.qwen  __init__.py  alpaca_questions.jsonl  analyze.py  capability_ratings.py  config.py  cot_aggregate_label_column.py  cot_extract_rationales.py  cot_judge.py  covertness.py  fairness_instructions.py  generate.py  orchestrate.py  plot_win_rates.py  proof_questions_proofnet.jsonl  rate.py  rate_codex.py  rate_qwen.py  run.py
ai_company_questions/: bubble_v1.py  bubble_v1_judge.py  covertness.py  motivated_reasoning.py  plot_probabilities.py
choosing_activities/: README.md  activities.yaml  additional_models.py  build_prompt.py  config.yaml  covertness.py  covertness_monitor_prompt.txt  local_runner.py  pipeline.py  plot_correlation_vs_effort.py  plot_model_comparison.py  plot_score_vs_selection.py  score_activities.py  score_activities_revealed.py
donation_bet/: bias_metrics.py  bias_vs_cot_len.py  cot_categories_common.py  cot_len_by_first_estimate.py  equal_charities_baseline.py  get_data.py  inspect_data.py  monitorability.py  non_median.py  plot_biases.py  plot_cot_categories_v2.py  plot_eval_awareness.py  plot_eval_notice_full_suite.py  plot_framing_bias.py  plot_monitorability_by_eval_awareness.py  plot_trajectories.py  run_eval_notice_all_models_parallel.py  run_monitorability.py  system_prompts.py  (+2 more)
(+380 files in other folders)
