[project]
name = "value_leakage"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "llmcomp",
    "seaborn>=0.13.2",
    "google-genai>=1.0.0",
    "anthropic>=0.96.0",
    "python-dotenv>=1.0.0",
    "tinker>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "shared",
    "donation_bet",
    "ai_company_questions",
    "job_offer",
    "agentic_grading",
    "choosing_activities",
]

[tool.uv.sources]
llmcomp = { git = "https://github.com/johny-b/llmcomp" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
